Self/playorg/Unpackaged/Config/objects/Assessment_Question_Option__c.object
<CustomObject>
    <description>ASSESSMENT  - Potential Question Responses and Detailed Descriptions</description>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>Relationship to Question Table</description>
        <label>Question</label>
        <referenceTo>Assessment_Question__c</referenceTo>
        <relationshipLabel>Assessment Question Options</relationshipLabel>
        <relationshipName>Assessment_Question_Option</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rating_Description__c</fullName>
        <description>Detailed description of the rating</description>
        <label>Rating Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <description>Rating / Score potential Values</description>
        <label>Rating</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>The Score for this Rating</description>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Assessment Question Option</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>QuestionDetailID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Question Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>